...
                </Animated.View>
                <TextInput
                  {...otherProps}
                  allowFontScaling={false}
                  underlineColorAndroid="transparent"
                  onSelectionChange={handleSelectionChange}
                  testID="BitcoinAmountInput"
                  keyboardType="numeric"
                  onChangeText={handleChangeText}
                  placeholder="0"
                  maxLength={maxLength}
                  ref={textInputRef}
                  editable={!isLoading && !disabled && !staleFiatAmount}
...
        </View>
        {!disabled &&
          (amount !== BitcoinUnit.MAX ? (
            <TouchableOpacity
              accessibilityRole="button"
              accessibilityLabel={loc._.change_input_currency}
              testID="changeAmountUnitButton"
              style={[styles.sideRail, styles.changeAmountUnit]}
              onPress={changeAmountUnit}
            >
              <Image source={require('../img/round-compare-arrows-24-px.png')} />
            </TouchableOpacity>
          ) : (
...
